Added tiktok link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="list-item-logo">
-                        <a href="" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.tiktok.com/@arts.by.tina?_t=8ZE34Sf8u3S&_r=1" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="27.5" height="27.5" viewBox="0 0 256 256" xml:space="preserve" class="lift">
                                 <defs>
                                 </defs>
@@ -60,7 +60,7 @@
                     <a class="nav-hidden" href="#contact">Contact</a>
                     <a class="nav-hidden" href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer">Instagram</a>
                     <a class="nav-hidden" href="https://www.youtube.com/@canart6897" target="_blank" rel="noopener noreferrer">Youtube</a>
-                    <a class="nav-hidden" href="https://www.youtube.com/@canart6897" target="_blank" rel="noopener noreferrer">TikTok</a>
+                    <a class="nav-hidden" href="https://www.tiktok.com/@arts.by.tina?_t=8ZE34Sf8u3S&_r=1" target="_blank" rel="noopener noreferrer">TikTok</a>
                 </div>
             </div>
         </nav>
