Enhanced mobile version

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
             <a  id="link" class="link" onclick="reveal()">Load more</a>
             <div class="popup-image">
                 <span>&times;</span>
-                <img src="./src/images/Husky with coloured pencils.jpg">
+                <div class="img-holder">
+                    <img src="./src/images/Husky with coloured pencils.jpg">
+                </div>
             </div>
         </div>
         <div class="testimonials">
