--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
                     <img src="./src/images/tweety png no background.png" class="contact-picture">
                 </div>
             </span>
-            <form class="contact-form">
+            <form class="contact-form" action="mailto:can.draw.art@gmail.com">
                 <input class="name form" type="text" placeholder="Full Name">
                 <input class="email form" type="email" placeholder="Email">
                 <textarea class="message form" placeholder="Message"></textarea>
-                <a class="submit form" href="mailto:can.draw.art@gmail.com">Submit</a>
+                <input  type="submit" class="submit form"></input>
             </form>
         </div>
     </section>
