--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <img src="./src/images/tweety png no background.png" class="contact-picture">
                 </div>
             </span>
-            <form class="contact-form"  action="https://formsubmit.co/mailto:stefan.ruchlewicz.email@gmail.com" method="POST">
+            <form class="contact-form"  action="https://formsubmit.co/stefan.ruchlewicz.email@gmail.com" method="POST">
                 <input class="name form" type="text" placeholder="Full Name" name="name">
                 <input class="email form" type="email" placeholder="Email" name="email">
                 <textarea class="message form" placeholder="Message" name="message"></textarea>
